--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,9 +9,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><%= link_to "Tickets", root_path, class: "nav-link" %></li>
-        <li class="nav-item"><%= link_to "Events", events_path, class: "nav-link" %></li>
-        <li class="nav-item"><%= link_to "Agents", agents_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Barcodes", barcode_index_path, class: "nav-link" %></li>
         <% if current_user != true_user %>
           <li class="nav-item">
             <%= link_to "[Stop Impersonate]", stop_impersonating_users_path, data: { turbo_method: :post }, class: "nav-link text-warning fw-bold" %>
