--- a/app/views/barcode/index.html.erb
+++ b/app/views/barcode/index.html.erb
@@ -8,7 +8,9 @@
             <div class="card-body">
                 <h5 class="card-title">Barcode Labels</h5>
                 <p class="card-text">Generate barcodes for label printing</p>
-                <a href="#" class="btn btn-primary">Go</a>
+                <!--a href="#" class="btn btn-primary">Go</a-->
+
+                <%=render "upload_form" %>
             </div>
         </div>
     </div>
