--- a/app/views/barcode/index.html.erb
+++ b/app/views/barcode/index.html.erb
@@ -1,10 +1,13 @@
 
-<h1><img src="/assets/barcode.png" alt="Barcode Generator"> Barcode Utilities</h1>
-
+<h1>
+    <%= image_tag "barcode.png", alt: "Barcode Generator" %>
+    Barcode Utilities
+</h1>
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
         <div class="card h-100">
-            <img src="/assets/barcode.png" class="card-img-top" alt="Barcode Generator" style="width: 50px; height: 50px; object-fit: contain;">
+            <%= image_tag "barcode.png", alt: "Barcode Generator", style: "width: 50px; height: 50px; object-fit: contain;" %>
+            
             <div class="card-body">
                 <h5 class="card-title">Barcode Labels</h5>
                 <p class="card-text">Generate barcodes for label printing</p>
