--- a/app/views/barcode/index.html.erb
+++ b/app/views/barcode/index.html.erb
@@ -9,8 +9,8 @@
             <%= image_tag "barcode.png", alt: "Barcode Generator", style: "width: 50px; height: 50px; object-fit: contain;" %>
             
             <div class="card-body">
-                <h5 class="card-title">Barcode Labels</h5>
-                <p class="card-text">Generate barcodes for label printing</p>
+                <h5 class="card-title">ITF14 Labels</h5>
+                <p class="card-text">Generate ITF14 lables warehouse.</p>
                 <!--a href="#" class="btn btn-primary">Go</a-->
 
                 <%=render "upload_form" %>
